# qsynth

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.in  NEWS  README  README-OSX  README-cmake.md  README.cmake  README.md  TODO  TRANSLATORS  configure.ac  configure.in  qsynth.1  qsynth.desktop.in  qsynth.fr.1  qsynth.pro  qsynth.pro.in  qsynth.spec.in
cmake/: DeploymentUtils.cmake  TranslationUtils.cmake
debian/: changelog  control  copyright  rules
icons/: qsynth.qrc  qsynth.xcf  qsynth.xpm
rpm/: qsynth.spec
src/: CMakeLists.txt  cmake_config.h  cmake_config.h.in  cmakeconfig.cmake  config.h.cmake  main.cpp  qsynth.cpp  qsynth.desktop  qsynth.desktop.in  qsynth.h  qsynth.qrc  qsynthAbout.h  qsynthAboutForm.cpp  qsynthAboutForm.h  qsynthAboutForm.ui  qsynthAboutForm.ui.h  qsynthChannels.cpp  qsynthChannels.h  qsynthChannelsForm.cpp  qsynthChannelsForm.h  qsynthChannelsForm.ui  qsynthChannelsForm.ui.h  qsynthDialClassicStyle.cpp  qsynthDialClassicStyle.h  qsynthDialPeppinoStyle.cpp  qsynthDialPeppinoStyle.h  qsynthDialSkulptureStyle.cpp  qsynthDialSkulptureStyle.h  qsynthDialVokiStyle.cpp  qsynthDialVokiStyle.h  qsynthEngine.cpp  qsynthEngine.h  qsynthKnob.cpp  qsynthKnob.h  qsynthMainForm.cpp  qsynthMainForm.h  qsynthMainForm.ui  qsynthMainForm.ui.h  qsynthMessagesForm.cpp  qsynthMessagesForm.h  (+29 more)
src/appdata/: org.rncbc.qsynth.desktop  org.rncbc.qsynth.metainfo.xml  qsynth.appdata.xml
src/images/: qsynth.icns  qsynth.xcf
src/macOS/: creadmg.sh
src/man1/: qsynth.1  qsynth.fr.1
src/translations/: qsynth_cs.ts  qsynth_de.ts  qsynth_es.ts  qsynth_fr.ts  qsynth_ka.ts  qsynth_ru.ts  qsynth_sr.ts
src/win32/: gpl.rtf  qsynth.rc  qsynth.rc.in  setup.nsi  setup.nsi.in
translations/: qsynth_cs.ts  qsynth_de.ts  qsynth_es.ts  qsynth_ru.ts
win32/: config.h  qsynth.pro  qsynth.rc  setup.nsi
